# stakan

./: .gitignore  DEVELOPMENT.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/stakan/: __init__.py
src/stakan/api/: __init__.py
src/stakan/cli/: __init__.py
src/stakan/core/: __init__.py
src/stakan/core/chunkers/: __init__.py  base.py  recursive.py
src/stakan/core/embedding_models/: __init__.py  base.py  openai.py
src/stakan/core/parsers/: __init__.py  base.py  pdf.py
tests/: __init__.py
tests/config/: __init__.py
tests/core/: __init__.py
tests/core/chunkers/: __init__.py  test_recursive.py
tests/core/embedding_models/: __init__.py  test_openai.py
tests/core/parsers/: test_pdf.py
