[project]
name = "stakan"
version = "0.1.0"
description = "S.T.A.K.A.N. — Semantic Textual Analysis & Knowledge Aggregation Network"
readme = "README.md"
authors = [
    { name = "Mikhail Polevoda", email = "snail1704@gmail.com" },
    { name = "Yulia Yanaeva", email = "anaevaulia5@gmail.com" },
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
