[project]
name = "stakan"
version = "0.1.0"
description = "S.T.A.K.A.N. — Semantic Textual Analysis & Knowledge Aggregation Network"
readme = "README.md"
authors = [
    { name = "Mikhail Polevoda", email = "snail1704@gmail.com" },
    { name = "Yulia Yanaeva", email = "anaevaulia5@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "docling>=2.36.1",
    "openai>=1.86.0",
    "pydantic>=2.11.7",
    "qdrant-client>=1.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
api = [
    "fastapi[standard]>=0.115.12",
]
cli = [
    "typer>=0.16.0",
]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.13",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".vscode",
    ".venv",
    "venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
]

line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "TD002", "FIX002"]

exclude = []

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# "tests/*" = ["D", "ANN201", "PLR2004", "S101", "ANN001"]
"tests/*" = ["D", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = ["./.venv"]
pythonVersion = "3.12"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
